added color/font to base

--- a/Minerva/main_app/templates/home.html
+++ b/Minerva/main_app/templates/home.html
@@ -2,7 +2,7 @@
 {% block content%}
 <h1>Minerva Login</h1>
 <hr>
-<div>
+<div class= "container">
     <a href="/login">Login</a>
     <a href="">Help</a>
 </div>
