--- a/Minerva/main_app/templates/base.html
+++ b/Minerva/main_app/templates/base.html
@@ -1,24 +1,32 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans&display=swap" rel="stylesheet">
     <title>Minerva</title>
 </head>
 <body>
     <header>
-        <h1 class=navbar>Minerva</h1>
-    </header>
+        <nav class="navbar navbar-light" style="background-color: #ffe680">
+            <h1 id="Minerva-Logo" class="navbar-brand" href="home/" >Minerva</h1>
+        </nav>
+        </header>
     <main>
         {% block content%}
         {% endblock %}
     </main>
     <footer>
-            <a href="">Products</a>
-            <a href="">Privacy Statement</a>
-            <a href="">Support</a>
-            <a href="">Company</a>
+            <nav class="navbar navbar-light" style="background-color: #ffe680">
+                <a href="">Products</a>
+                <a href="">Privacy Statement</a>
+                <a href="">Support</a>
+                <a href="">Company</a>
+            </nav>
         </footer>
 </body>
 </html>
