--- a/Minerva/main_app/templates/login.html
+++ b/Minerva/main_app/templates/login.html
@@ -1,14 +1,14 @@
 {% extends 'base.html'%}
 {% block content %}
-<div>
-    <form class="Login">
+
+<div class="text-center">
+    <form class="form-signin">
         <div>
             <input type="username" id="inputUsername"class="form-control" placeholder="Username" required autofocus>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required> 
-            <label for=""></label>
         </div>
             <button class="btn btn-md">Login</button>
     </form>
 </div>
-{% endlock %}
+{% endblock %}
 <!--try bootstraps sizing for the inputs-->>
