login.html is now login_view.html

--- a/Minerva/main_app/templates/Students/home.html
+++ b/Minerva/main_app/templates/Students/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html"%}
 {% start block%}
-
+<!--Have page buttons brought to the right-->
+<!--use a container to hold student assignments-->
 {% endblock%}
