--- a/Minerva/main_app/static/style.css
+++ b/Minerva/main_app/static/style.css
@@ -1,3 +1,9 @@
+body{
+    display: block;
+    margin: 0 auto;
+    font-family: 'Open Sans', sans-serif;
+}
+
 #Minerva-Logo{
     font-family: 'Josefin Sans', sans-serif;
 }
