--- a/Minerva/main_app/templates/home.html
+++ b/Minerva/main_app/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html"%}
 {% block content%}
-<h1>Minerva Login</h1>
+<div id="Minerva-Login">
+    <h1>Minerva Login</h1>
+</div>
 <hr>
 <div class= "container">
     <a href="/login">Login</a>
