--- a/Minerva/main_app/templates/home.html
+++ b/Minerva/main_app/templates/home.html
@@ -1,11 +1,10 @@
 {% extends "base.html"%}
 {% block content%}
-<div id="Minerva-Login">
-    <h1>Minerva Login</h1>
-</div>
-<hr>
-<div class= "container">
-    <a href="/login">Login</a>
-    <a href="">Help</a>
-</div>
+<div class="container">
+    <div class="d-flex justify-center">
+      <h3 style="margin:30px">Please Login</h3>
+        <div class="d-flex flex-column" style="margin:20px">
+            <a href="">Login</a>
+            <a href="">About</a>
+        </div>
 {% endblock%}
