--- a/Minerva/main_app/templates/home.html
+++ b/Minerva/main_app/templates/home.html
@@ -1,9 +1,8 @@
-{% extends "base.html"%}
-{% block content%}
-<h1>Minerva Login</h1>
-<hr>
-<div>
-    <a href="/login">Login</a>
-    <a href="">Help</a>
-</div>
-{% endblock%}
+{% extends 'base.html' %}
+
+{% block content %}
+<h2>Select your type:</h2>
+<a href="{% url 'student_signup' %}" class="btn btn-lg" role="button">I'm a student</a>
+<a href="{% url 'teacher_signup' %}" class="btn btn-lg" role="button">I'm a teacher</a>
+<a href="{% url 'parent_signup' %}" class="btn btn-lg" role="button">I'm a parent</a>
+{% endblock %}
