--- a/Minerva/main_app/templates/Students/index.html
+++ b/Minerva/main_app/templates/Students/index.html
@@ -1,16 +1,68 @@
-{% extends "base.html"%}
-{% start block%}
-<section>Class Name</section>
-<hr>
-<!--Placeholder list, definitely gonna be and iterable/condition -->
-<!--create a "test student(as well as the others)" -->
-<ul class="list-group">
-    <li class="list-group-item">First Item</li>
-    <li class="list-group-item">Second item</li>
-    <li class="list-group-item">Third item</li>
-    <li class="list-group-item">Fourth item</li>
-    <li class="list-group-item">Five item</li>
-    <li class="list-group-item">Six item</li>
-</ul>
+<nav class="Student-nav navbar navbar-default navbar-light" style="background-color: #ffe680">
+    <div class="navbar-expand-sm d-flex flex-grow-1 text-right">
+      <ul class="navbar-nav ml-auto flex-nowrap active">
+        <li class="nav-item">
+          <a href="#" class="nav-link m-2 menu-item nav-active">My Courses</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link m-2 menu-item">Submitted </ br>Assignments</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link m-2 menu-item">Logout</a>
+        </li>
+      </ul>
+    </div>
+</nav>
+<main class="container">
+<!--     {% block content%} -->
+<!--Student NavBar--->
 
-{% endblock%}
+<table class="table table-striped">
+  <thead>
+    <th scope="col">Course Name</th>
+    <th scope="col">Course Number</th>
+    <th scope="col">Assignments</th>
+    <th scope="col">Assigned Task</th>
+    <th scope="col">Task Details</th>
+    <th scope="col">Submit</th>
+  </thead>
+  <tbody>
+    <tr>
+      <!--         {model input -->
+      <td>Subject</td>
+      <!-- assignment.subject-->
+      <td>Course#</td>
+      <!--Assignment.classroom--->
+      <td>subject.N</td>
+      <td>Due Date</td>
+      <!--assignment.due_date-->
+      <td><a herf="#">Details</a> </td>
+      <td><input type="checkbox" method="DELETE"></td>
+    </tr>
+    <tr>
+<!--these are just placeholders-->
+      <td>Subject</td>
+      <td>Course#</td>
+      <td>subject.N</td>
+      <td>Due Date</td>
+      <td><a herf="#">Details</a> </td>
+      <td><input type="checkbox" method="DELETE"></td>
+    </tr>
+    <tr>
+      <td>Subject</td>
+      <td>Course#</td>
+      <td>subject.N</td>
+      <td>Due Date</td>
+      <td><a herf="#">Details</a> </td>
+      <td><input type="checkbox" method="DELETE"></td>
+    </tr>
+    <tr>
+      <td>Subject</td>
+      <td>Course#</td>
+      <td>subject.N</td>
+      <td>Due Date</td>
+      <td><a herf="#">Details</a> </td>
+      <td><input type="checkbox"></td>
+    </tr>
+  </tbody>
+</table>
