--- a/Minerva/main_app/static/style.css
+++ b/Minerva/main_app/static/style.css
@@ -71,7 +71,7 @@ margin-top: 10px;
 }
 form-signin-heading{
 display:flex;
-hight: 10px;
+height: 10px;
 padding: 10px;
 }
 form{
@@ -183,7 +183,7 @@ margin-top: 10px;
 }
 form-signin-heading{
 display:flex;
-hight: 10px;
+height: 10px;
 padding: 10px;
 }
 form{
