fixes block content error

--- a/Minerva/main_app/templates/Parents/s_index.html
+++ b/Minerva/main_app/templates/Parents/s_index.html
@@ -1,5 +1,5 @@
 {% extends "base.html"%}
-{% start block%}
+{% block content%}
 <!--The data that will load here will be 
  a chosen student's course's(also a list)
 each table trow will have a course name, credits(may or 
