fixes blocked content, ads h1 tag for testing

--- a/Minerva/main_app/templates/Parents/c_index.html
+++ b/Minerva/main_app/templates/Parents/c_index.html
@@ -1,6 +1,7 @@
 {% extends "base.html"%}
-{% start block%}
+{% block content%}
 <!--An index showing a givien chosen studnet's assignments
     It should load course name, course number and assignmnt 
     namme, due date and when it is due--->
+    <h1>This shows the course index page </h1>
 {% endblock%}
