--- a/Minerva/main_app/templates/Parents/s_details.html
+++ b/Minerva/main_app/templates/Parents/s_details.html
@@ -1,4 +1,4 @@
 {% extends "base.html"%}
 {% block content %}
-<h1>this is the parent index.html</h1>
+<h1>this is the parent S_details.html</h1>
 {% endblock %}
