--- a/Minerva/main_app/templates/Parents/s_index.html
+++ b/Minerva/main_app/templates/Parents/s_index.html
@@ -1,8 +1,10 @@
 {% extends "base.html"%}
-{% start block%}
+{% block content%}
 <!--The data that will load here will be 
  a chosen student's course's(also a list)
 each table trow will have a course name, credits(may or 
 may not be needed, class start and end time and teacher name
  -->
+
+ <h1>this is the parents s_index.html</h1>
 {% endblock%}
