--- a/Minerva/main_app/templates/Students/Completed.html
+++ b/Minerva/main_app/templates/Students/Completed.html
@@ -1,1 +1,8 @@
 <!--index of completed assignments-->
+{% extends "base.html"%}
+{% block content%}
+
+<h1>This is the student comp_index.</h1>
+<!--Have page buttons brought to the right-->
+<!--use a container to hold student assignments-->
+{% endblock%}
