adds h1 tags to  students folder

--- a/Minerva/main_app/templates/Students/course_index.html
+++ b/Minerva/main_app/templates/Students/course_index.html
@@ -1,1 +1,8 @@
 <!--index of student's courses-->
+{% extends "base.html"%}
+{% block content%}
+
+<h1>This is the student course_index.</h1>
+<!--Have page buttons brought to the right-->
+<!--use a container to hold student assignments-->
+{% endblock%}
