adds h1 tag for template testing fixes blocked content errors

--- a/Minerva/main_app/templates/Teachers/s_details.html
+++ b/Minerva/main_app/templates/Teachers/s_details.html
@@ -1,3 +1,9 @@
 <!--Class details, shows an index of student 
     who have and and haven't completed there
     haven't completed there assignments-->
+    {% extends "base.html"%}
+    
+    {% block content %}
+    <h1>this is teacher s_details.html</h1>
+    
+    {% endblock%}
