--- a/Minerva/main_app/templates/Teachers/ass_assign.html
+++ b/Minerva/main_app/templates/Teachers/ass_assign.html
@@ -1,1 +1,7 @@
 <!--Teacher assigns homework page-->
+{% extends "base.html"%}
+
+{% block content %}
+<h1>this is teacher ass.assign.html</h1>
+
+{% endblock%}
