--- a/Minerva/main_app/templates/base.html
+++ b/Minerva/main_app/templates/base.html
@@ -20,7 +20,9 @@
             {% else %}
       <a href="{ url 'login'}">Login</a>
       <a href="">About</a>
+        {%endif%}
         </nav>
+
         </header>
     <main>
         {% block content%}
